Add basic element picking

--- a/src/_tab3.pug
+++ b/src/_tab3.pug
@@ -72,3 +72,5 @@ div.col
 hr
 p.
     If you can do these exercises by hand without a calculator, you shouldn't have any trouble with matrix multiplication.
+div#interactive_exercise_location
+    noscript Interactive exercise won't work without JavaScript. Please upgrade to an up-to-date browser.
