--- a/src/index.pug
+++ b/src/index.pug
@@ -5,7 +5,7 @@ html(lang='en')
         meta(name='viewport' content='width=device-width, initial-scale=1')
         meta(name='description' content='An educational website about matrices.')
         link(rel='icon' href='images/title.png')
-        link(rel='stylesheet' href='style.css')
+        link(rel='stylesheet' href='styles/style.css')
         script(src='scripts/main.js' type='module')
         title Matrices
     body
