--- a/src/styles/_breakpoint.scss
+++ b/src/styles/_breakpoint.scss
@@ -1,4 +1,4 @@
-@import '_globals';
+@import "_globals.scss";
 @mixin breakpoint($type) {
   @if $type == mobile {
     @media (max-width: $mobile-width) {
