--- a/src/styles/_dropdown.scss
+++ b/src/styles/_dropdown.scss
@@ -1,5 +1,5 @@
-@import '_globals';
-@import '_breakpoint';
+@import "_globals.scss";
+@import "_breakpoint.scss";
 nav, nav * {
   transition: background-color 0.5s, border 0.5s, filter 0.5s, opacity 0.5s;
 }
