Add basic interactive exercise

--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -3,6 +3,7 @@
 @import '_dropdown';
 @import '_tabs_navigation';
 @import "_tabs_look";
+@import "_interactive";
 @import '_header';
 @import '_footer';
 * {
