--- a/src/styles/_tabs_look.scss
+++ b/src/styles/_tabs_look.scss
@@ -110,7 +110,7 @@ div.expr {
     column-count: 3;
   }
   height: min-content;
-  padding: 1em 0;
+  margin: 1em 0;
 }
 .col > * {
   break-inside: avoid;
