Move quiz to file

--- a/src/styles/_interactive.scss
+++ b/src/styles/_interactive.scss
@@ -16,6 +16,13 @@
   }
 }
 
+.matrix_quiz {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
 .interactive_form {
   display: flex;
   flex-direction: column;
