Add notifications system

--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -6,6 +6,7 @@
 @import "_interactive";
 @import '_header';
 @import '_footer';
+@import '_notifications';
 * {
   font-family: inherit;
   box-sizing: inherit;
