--- a/src/styles/_interactive.scss
+++ b/src/styles/_interactive.scss
@@ -30,6 +30,10 @@
   }
 }
 
+$mid: 30%;
+$checkmark-hidden:  polygon($mid 0%, $mid 0%, $mid 100%, $mid 100%, $mid   0%, $mid 0%);
+$checkmark-visible: polygon($mid 0%, 0%   0%, 0%   100%, 100% 100%, 100%   0%, $mid 0%);
+
 .interactive_background {
   opacity: 0;
   width: 100%;
@@ -39,14 +43,26 @@
   left: 0;
   top: 0;
   pointer-events: none;
-  svg {
-    // TODO use this to display a checkmark on correct answer
+  &::after, &::before {
+    content: '';
     position: absolute;
+    pointer-events: none;
+    background-image: url("../images/checkmark.svg");
+    background-repeat: no-repeat;
+    width: 50%;
+    height: 100%;
+    z-index: 1;
+    clip-path: $checkmark-hidden;
+  }
+  &::before {
     left: 0;
     top: 0;
-    width: 100%;
-    height: 100%;
-    clip-path: polygon(0% 0%, 0% 0%, 0% 100%, 0% 100%);
+    background-position: center left;
+  }
+  &::after {
+    right: 0;
+    top: 0;
+    background-position: center right;
   }
 }
 
@@ -58,9 +74,10 @@
 .permanent_flash {
   transition: opacity 1s;
   opacity: 1;
-  svg {
-    transition: clip-path 0.5s;
-    clip-path: polygon(0% 0%, 100% 0%, 100% 100%, 0% 100%);
+  &::after, &::before {
+    transition: clip-path 1s;
+    transition-delay: 0.5s;
+    clip-path: $checkmark-visible;
   }
 }
 
