--- a/src/styles/_tabs_look.scss
+++ b/src/styles/_tabs_look.scss
@@ -65,6 +65,7 @@ span.expr {
 div.expr {
   display: flex;
   align-items: center;
+  justify-content: center;
   flex-wrap: wrap;
   row-gap: 1em;
   span, table {
