Start on inversion exercise

--- a/src/index.pug
+++ b/src/index.pug
@@ -22,10 +22,13 @@ html(lang='en')
                     li: a(href='#tab1') Basic Operations
                     li: a(href='#tab2') Inverse
                     li: a(href='#tab3') Multiplication Exercises
+                    li: a(href='#tab4') Inversion Practice
             section#tab2.tab
                 include _tab2.pug
             section#tab3.tab
                 include _tab3.pug
+            section#tab4.tab
+                include _tab4.pug
             main#tab1.tab
                 include _tab1.pug
         footer
