--- a/src/styles/_tabs_look.scss
+++ b/src/styles/_tabs_look.scss
@@ -26,7 +26,7 @@
   linear-gradient(to right, transparent 0%, transparent 45%, $bg-color 45%, $bg-color 55%, transparent 60%, transparent 100%);
   background-size: 1em 1em;
   filter: contrast(0.5);
-  z-index: -1;
+  z-index: -2;
   pointer-events: none;
 }
 .tab {
@@ -144,4 +144,23 @@ table.matrix {
   tr:nth-child(odd) td:nth-child(even), tr:nth-child(even) td:nth-child(odd) {
     background-color: red;
   }
+}
+
+canvas.canvas_background {
+  position: absolute;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  transition: opacity 2s ease-in-out;
+  opacity: 0;
+  z-index: -1;
+}
+
+canvas.canvas_background_fadein {
+  opacity: 1;
+}
+
+canvas.canvas_background.canvas_background_fadein.canvas_vanishing {
+  opacity: 0;
 }
